proj1/tests/error/break_error.py
for x in (1, 2):
	1 + 1
break
